Closed
Bug 99962
Opened 24 years ago
Closed 24 years ago
Inspector assertions when flashing a DOM node with display: none
Categories
(SeaMonkey :: UI Design, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bryner, Assigned: hewitt)
Details
(Keywords: verifyme)
Attachments
(1 file)
|
1.44 KB,
patch
|
Details | Diff | Splinter Review |
To reproduce:
- Inspect a navigator.xul window
- Click on a stringbundleset node
###!!! ASSERTION: not a coord value: '(mUnit == eStyleUnit_Coord)', file
../../../../dist/include/nsStyleCoord.h, line 135
This assertion fires several times as inspector tries to flash the node in the
window. We need to check that the margins are non-null before trying to get the
values. Patch coming up.
| Reporter | ||
Comment 1•24 years ago
|
||
| Reporter | ||
Comment 2•24 years ago
|
||
sr=hyatt (via irc)
| Assignee | ||
Comment 3•24 years ago
|
||
r=hewitt
| Reporter | ||
Comment 4•24 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•