Bug 99962 - inspector assertions when flashing a DOM node with display: none.  r=hewitt, sr=hyatt.